# serpapi-job-finder-cli

./: README.md  pyproject.toml  run.py
.github/workflows/: ci.yml
serpapi-job-finder-cli/: pyproject.toml
serpapi-job-finder-cli/examples/: sample_run.txt
serpapi-job-finder-cli/src/job_finder/: cli.py
serpapi-job-finder-cli/tests/: test_cli.py
src/job_finder/: cli.py  serpapi_client.py
